{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 12,
  "lineage": "afaac4d3-4605-7828-f12d-1e3d7930d0ff",
  "resources": [
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8d707c92517a2c",
            "arn": "arn:aws:ec2:ap-south-1:665846621851:instance/i-0c6d858444e6cd77d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6d858444e6cd77d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b1039d085119eb30",
            "private_dns": "ip-10-0-2-14.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.14",
            "public_ip": "3.111.214.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a19022419bc9ca4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03fc57c935e292462"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086f4bfc9d1446b97",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03fc57c935e292462"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.private_sg",
            "module.module_vpc.aws_subnet.private_subnet",
            "module.module_vpc.aws_vpc.my_vpc",
            "module.module_vpc.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8d707c92517a2c",
            "arn": "arn:aws:ec2:ap-south-1:665846621851:instance/i-089f8e27c5336521d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089f8e27c5336521d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d888f07e34f4190b",
            "private_dns": "ip-10-0-1-78.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_ip": "43.205.254.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059bb40d5112f8f97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c45f9df4e31f4922"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd3be573619bf8ec",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c45f9df4e31f4922"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.public_sg",
            "module.module_vpc.aws_subnet.public_subnet",
            "module.module_vpc.aws_vpc.my_vpc",
            "module.module_vpc.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:internet-gateway/igw-0acdbe92fb1cfd593",
            "id": "igw-0acdbe92fb1cfd593",
            "owner_id": "665846621851",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:route-table/rtb-044d05d61d362f89a",
            "id": "rtb-044d05d61d362f89a",
            "owner_id": "665846621851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acdbe92fb1cfd593",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_rt"
            },
            "tags_all": {
              "Name": "my_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc7514410861efe4",
            "route_table_id": "rtb-044d05d61d362f89a",
            "subnet_id": "subnet-0cd3be573619bf8ec"
          },
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_route_table.my_rt",
            "module.module_vpc.aws_subnet.public_subnet",
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:security-group/sg-03fc57c935e292462",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-03fc57c935e292462",
            "ingress": [],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "665846621851",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:security-group/sg-0c45f9df4e31f4922",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45f9df4e31f4922",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "665846621851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:subnet/subnet-086f4bfc9d1446b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f4bfc9d1446b97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665846621851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:subnet/subnet-0cd3be573619bf8ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd3be573619bf8ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665846621851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0fa4eed615467f4a8"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:665846621851:vpc/vpc-0fa4eed615467f4a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d074f7a933b16da",
            "default_route_table_id": "rtb-0c911953db6d1e8f5",
            "default_security_group_id": "sg-0041f0e810caf8e2e",
            "dhcp_options_id": "dopt-0f94b6404dae29699",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa4eed615467f4a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c911953db6d1e8f5",
            "owner_id": "665846621851",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}